<resources>
    <string name="app_name">Fresh Music</string>

    <string name="title_activity_now_playing">Now Playing</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="getstarted">GET STARTED</string>
    <string name="version">Version: 1.00</string>
    <string name="playlist">MY PLAYLISTS</string>

    <string name="albums_text">Albums</string>
    <string name="playlist_text">PlayLists</string>
    <string name="genres_text">Genres</string>
    <string name="comment_button">COMMENT</string>
    <string name="rate_button">RATE SONG</string>
    <string name="track_name">Trackname appears here</string>
    <string name="artiste_name">Artistes name appears here</string>
</resources>
